updates to APIs for bulk fetching gate connections, getting reverse hierarchy info from systems, refactor to use eve-frontier-tools for datasource
